#------------------------------------------------------------------------------#
# Top-level makefile for SKA project
#------------------------------------------------------------------------------#

SUBDIRS = lib bin

#------------------------------------------------------------------------------#
# Create links
#------------------------------------------------------------------------------#

links:
	@(cd ${top_srcdir}/src; [ -d include ] && rm -rf include; \
		mkdir include && cd include; \
		for file in `find .. -type f -regex '.*\.h*'` ; do \
			link=`echo $$file`; \
			ln -s $$link .; \
		done \
	)
