################################################################################
# Copyright (c) 2012 Los Alamos National Security, LLC
# All rights reserved.
################################################################################

#------------------------------------------------------------------------------#
# Top-level makefile for SKA project
#------------------------------------------------------------------------------#

SUBDIRS = lib bin viewer

#------------------------------------------------------------------------------#
# Create links
#------------------------------------------------------------------------------#

links:
	@(cd ${top_srcdir}/src; [ -d include ] && rm -rf include; \
		mkdir include && cd include; \
		for file in `find .. -type f -regex '.*\.h*'` ; do \
			link=`echo $$file`; \
			ln -s $$link .; \
		done \
	)
