################################################################################
# Copyright (c) 2012 Los Alamos National Security, LLC
# All rights reserved.
################################################################################

#------------------------------------------------------------------------------#
# Makefile.am for saxpy directory
#------------------------------------------------------------------------------#

include $(top_srcdir)/config/rules.mk

all: saxpy.ll

saxpy.ll: saxpy.c
